# Simple-Chatbot

./: pyproject.toml  requirements.txt
Agents_Folder/: agents.py
FastAPI_Folder/: app.py  models_config.py
Logs_Folder/: logger_setup.py
Nodes_Folder/: nodes.py
Schema_File/: app_schema.py  state_schemas.py
StreamlitAPP_Folder/: streamlit_app.py
Testing_Folder/: react_agent_testing.ipynb  test_bot.ipynb
